# redmine

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
docs/: latest.json
docs/superpowers/plans/: 2026-06-18-icon-and-ui-redesign.md  2026-06-19-vlna1-task-interactions.md  2026-06-22-keychain-and-notarization.md
docs/superpowers/specs/: 2026-06-18-icon-and-ui-redesign.md  2026-06-19-vlna1-task-interactions-design.md
scripts/: release.sh  svg-to-png.cjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  notifications.rs  poller.rs  redmine.rs  store.rs
src/components/: Settings.test.tsx  Settings.tsx  Sidebar.test.tsx  Sidebar.tsx  Tabs.test.tsx  Tabs.tsx  TaskDetail.test.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.test.tsx  TaskList.tsx
src/store/: config.ts  tasks.test.ts  tasks.ts
